--- a/bookiranje.html
+++ b/bookiranje.html
@@ -24,6 +24,7 @@
                 <input type="text" name="Od"></br>
                 <input type="text" name="Do"></br></br>
                 <input type="submit" value="Submit">
+                <div></div>
             <form>
         </div>
     </body>
